[gd_scene load_steps=12 format=3 uid="uid://qky0utj52rj1"]

[ext_resource type="Script" uid="uid://dqttovjdbe03t" path="res://Scripts/watcher.gd" id="1_44uux"]
[ext_resource type="Script" uid="uid://csascovhhwwyb" path="res://Scripts/parallax_instance.gd" id="2_2c83t"]
[ext_resource type="Texture2D" uid="uid://dx1fi7eaulx3i" path="res://Sprites/Peper_non_stare.png" id="3_fduh5"]
[ext_resource type="Texture2D" uid="uid://dgdhnm4tkm6b0" path="res://Sprites/Peeper_Stare.png" id="4_aq2u6"]

[sub_resource type="Animation" id="Animation_ei6k2"]
resource_name = "Active"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fduh5"]
resource_name = "Flee"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ul5mc"]
resource_name = "Focus"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_fduh5"), ExtResource("4_aq2u6")]
}

[sub_resource type="Animation" id="Animation_2l3uo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fduh5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxInstance/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_aq2u6"]
resource_name = "Spawn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2c83t"]
resource_name = "Unfocus"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxInstance/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fduh5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu6f5"]
_data = {
&"Active": SubResource("Animation_ei6k2"),
&"Flee": SubResource("Animation_fduh5"),
&"Focus": SubResource("Animation_ul5mc"),
&"RESET": SubResource("Animation_2l3uo"),
&"Spawn": SubResource("Animation_aq2u6"),
&"Unfocus": SubResource("Animation_2c83t")
}

[node name="Watcher" type="Node2D"]
script = ExtResource("1_44uux")

[node name="ParallaxInstance" type="Node2D" parent="."]
script = ExtResource("2_2c83t")
distance_to_camera = 9.5
metadata/_custom_type_script = "uid://csascovhhwwyb"

[node name="Sprite2D" type="Sprite2D" parent="ParallaxInstance"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(20, 20)
texture = ExtResource("3_fduh5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fu6f5")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
